user photo design (disabled for now), MID-1665

--- a/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
@@ -13,6 +13,7 @@
 @import "page-dashboard.less";
 @import "page-debugs.less";
 @import "capabilities.less";
+@import "tree-theme-basic.less";
 
 div.wicket-debug-buttons {
   border: 1px solid #000000;
@@ -172,4 +173,15 @@ h3.w_captionText {
  */
 div.multivalue-form {
   margin-top: @padding-base-vertical;
+}
+
+.user-thumbnail {
+  background-color: #FFFFFF;
+  border: 1px solid #DDDDDD;
+  border-radius: 4px;
+  height: auto;
+  line-height: 1.42857;
+  max-width: 100%;
+  padding: 4px;
+  transition: all 0.2s ease-in-out 0s;
 }
