--- a/model/report-impl/src/test/resources/reports/reportAuditLogs.xml
+++ b/model/report-impl/src/test/resources/reports/reportAuditLogs.xml
@@ -45,24 +45,13 @@
 			<property name="net.sf.jasperreports.awt.ignore.missing.font" value="true"/>
 			<property name="net.sf.jasperreports.export.pdf.force.linebreak.policy" value="true"/>
 			<import value="com.evolveum.midpoint.report.ReportUtils"/>
-			<template><![CDATA[$P{BaseTemplateStyles}]]></template>
-			<parameter name="BaseTemplateStyles" class="java.lang.String"/>
-			<parameter name="LOGO_PATH" class="java.lang.String"/>
-			<queryString language="hql">
-				<![CDATA[select aer.timestamp as timestamp, 
-							aer.initiatorName as initiator, 
-							aer.eventType as eventType, 
-							aer.eventStage as eventStage, 
-							aer.targetName as targetName, 
-							aer.targetType as targetType, 
-							aer.targetOwnerName as targetOwnerName,
-							aer.outcome as outcome, 
-							aer.message as message, 
-							odo.delta as delta 
-							from RObjectDeltaOperation as odo 
-							join odo.record as aer 
-							where aer.timestamp >= '2000-01-01' and aer.timestamp <= '2020-12-31'
-							order by aer.timestamp]]></queryString>
+			<template><![CDATA[$P{baseTemplateStyles}]]></template>
+			<parameter name="baseTemplateStyles" class="java.lang.String"/>
+			<parameter name="logoPath" class="java.lang.String"/>
+			<parameter name="from" class="java.sql.Timestamp"/>
+			<parameter name="to" class="java.sql.Timestamp"/>
+			<parameter name="hqlQuery" class="java.lang.String"/>
+			<queryString language="hql"><![CDATA[$P!{hqlQuery}]]></queryString>
 			<field name="timestamp" class="java.sql.Timestamp"/>
 			<field name="initiator" class="java.lang.String"/>
 			<field name="eventType" class="com.evolveum.midpoint.repo.sql.data.audit.RAuditEventType">
@@ -95,7 +84,7 @@
 						</staticText>
 						<image>
 							<reportElement uuid="b0a76e6a-8f61-4d60-8dcd-3e51adb4cd4c" style="Title" x="589" y="13" width="203" height="45"/>
-							<imageExpression><![CDATA[$P{LOGO_PATH}]]></imageExpression>
+							<imageExpression><![CDATA[$P{logoPath}]]></imageExpression>
 						</image>
 					</frame>
 					<staticText>
@@ -108,7 +97,7 @@
 						<textElement verticalAlignment="Middle">
 							<font isBold="false"/>
 						</textElement>
-						<textFieldExpression><![CDATA["2000-01-01"]]></textFieldExpression>
+						<textFieldExpression><![CDATA[$P{from}]]></textFieldExpression>
 					</textField>
 					<staticText>
 						<reportElement uuid="e035dbd5-dc2f-45cb-936c-a08e9c011e43" style="Page header" x="2" y="115" width="100" height="20"/>
@@ -120,7 +109,7 @@
 						<textElement verticalAlignment="Middle">
 							<font isBold="false"/>
 						</textElement>
-						<textFieldExpression><![CDATA["2020-12-31"]]></textFieldExpression>
+						<textFieldExpression><![CDATA[$P{to}]]></textFieldExpression>
 					</textField>
 					<staticText>
 						<reportElement uuid="e035dbd5-dc2f-45cb-936c-a08e9c011e43" style="Page header" x="2" y="145" width="100" height="20"/>
@@ -144,37 +133,37 @@
 					<frame>
 						<reportElement uuid="3e8fdd6d-a6ff-4407-9a1e-5d6b4706300a" style="Column header" mode="Transparent" x="0" y="1" width="800" height="19" isRemoveLineWhenBlank="true"/>
 						<staticText>
-							<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" x="0" y="0" width="80" height="18"/>
+							<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" x="0" y="0" width="100" height="18"/>
 							<textElement textAlignment="Center" verticalAlignment="Middle"/>
 							<text><![CDATA[Timestamp]]></text>
 						</staticText>
 						<staticText>
-							<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" x="80" y="0" width="80" height="18"/>
+							<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" x="100" y="0" width="80" height="18"/>
 							<textElement textAlignment="Center" verticalAlignment="Middle"/>
 							<text><![CDATA[Initiator]]></text>
 						</staticText>
 						<staticText>
-							<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" x="160" y="0" width="90" height="18"/>
+							<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" x="180" y="0" width="90" height="18"/>
 							<textElement textAlignment="Center" verticalAlignment="Middle"/>
 							<text><![CDATA[Event Type]]></text>
 						</staticText>
 						<staticText>
-							<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" x="250" y="0" width="90" height="18"/>
+							<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" x="270" y="0" width="90" height="18"/>
 							<textElement textAlignment="Center" verticalAlignment="Middle"/>
 							<text><![CDATA[Event Stage]]></text>
 						</staticText>
 						<staticText>
-							<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" x="340" y="0" width="100" height="18"/>
+							<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" x="360" y="0" width="100" height="18"/>
 							<textElement textAlignment="Center" verticalAlignment="Middle"/>
 							<text><![CDATA[Target]]></text>
 						</staticText>
 						<staticText>
-							<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" x="440" y="0" width="80" height="18"/>
+							<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" x="460" y="0" width="80" height="18"/>
 							<textElement textAlignment="Center" verticalAlignment="Middle"/>
 							<text><![CDATA[Outcome]]></text>
 						</staticText>
 						<staticText>
-							<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" x="520" y="0" width="180" height="18"/>
+							<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" x="540" y="0" width="160" height="18"/>
 							<textElement textAlignment="Center" verticalAlignment="Middle"/>
 							<text><![CDATA[Message]]></text>
 						</staticText>
@@ -191,39 +180,39 @@
 					<frame>
 						<reportElement uuid="3e8fdd6d-a6ff-4407-9a1e-5d6b4706300a" style="Detail" mode="Opaque" x="0" y="0" width="800" height="14"/>
 						<textField isStretchWithOverflow="true" pattern="dd.MM.yy, HH:mm:ss">
-							<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="0" y="0" width="80" height="13" isPrintWhenDetailOverflows="true"/>
+							<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="0" y="0" width="100" height="13" isPrintWhenDetailOverflows="true"/>
 							<textElement verticalAlignment="Middle"/>
 							<textFieldExpression><![CDATA[$F{timestamp}]]></textFieldExpression>
 						</textField>
 						<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-							<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="80" y="0" width="80" height="13" isPrintWhenDetailOverflows="true"/>
+							<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="100" y="0" width="80" height="13" isPrintWhenDetailOverflows="true"/>
 							<textElement verticalAlignment="Middle"/>
 							<textFieldExpression><![CDATA[$F{initiator}]]></textFieldExpression>
 						</textField>
 						<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-							<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="160" y="0" width="90" height="13" isPrintWhenDetailOverflows="true"/>
+							<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="180" y="0" width="90" height="13" isPrintWhenDetailOverflows="true"/>
 							<textElement textAlignment="Center" verticalAlignment="Middle"/>
 							<textFieldExpression><![CDATA[$F{eventType}.getType()]]></textFieldExpression>
 						</textField>
 						<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-							<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="250" y="0" width="90" height="13" isPrintWhenDetailOverflows="true"/>
+							<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="270" y="0" width="90" height="13" isPrintWhenDetailOverflows="true"/>
 							<textElement textAlignment="Center" verticalAlignment="Middle"/>
 							<textFieldExpression><![CDATA[$F{eventStage}.getStage()]]></textFieldExpression>
 						</textField>
 						<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-							<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="340" y="0" width="100" height="13" isPrintWhenDetailOverflows="true">
+							<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="360" y="0" width="100" height="13" isPrintWhenDetailOverflows="true">
 								<printWhenExpression><![CDATA[!$F{targetType}.equals(null)]]></printWhenExpression>
 							</reportElement>
 							<textElement verticalAlignment="Middle"/>
 							<textFieldExpression><![CDATA[$F{targetName} + " (" + $F{targetType} + ") "]]></textFieldExpression>
 						</textField>
 						<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-							<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="440" y="0" width="80" height="13" isPrintWhenDetailOverflows="true"/>
+							<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="460" y="0" width="80" height="13" isPrintWhenDetailOverflows="true"/>
 							<textElement textAlignment="Center" verticalAlignment="Middle"/>
 							<textFieldExpression><![CDATA[$F{outcome}.getSchemaValue()]]></textFieldExpression>
 						</textField>
 						<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-							<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="520" y="0" width="180" height="13" isPrintWhenDetailOverflows="true"/>
+							<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="540" y="0" width="160" height="13" isPrintWhenDetailOverflows="true"/>
 							<textElement verticalAlignment="Middle"/>
 							<textFieldExpression><![CDATA[$F{message}]]></textFieldExpression>
 						</textField>
@@ -279,11 +268,7 @@
 	<export>pdf</export>
 	<!-- set to true if report needs hibernate session (e.g. hql query is used) -->
 	<useHibernateSession>true</useHibernateSession>
-	<!-- datasource sample, provider instance is obtained from spring context -->
-	<dataSource>
-		<providerClass>com.evolveum.midpoint.report.SomeCustomSuperProvider</providerClass>
-		<springBean>true</springBean>
-	</dataSource>
+
 	<reportField>
 		<nameReportField>timestamp</nameReportField>
 		<nameHeaderField>Timestamp</nameHeaderField>
@@ -344,10 +329,26 @@
 	</reportField>
 	<!-- configuration properties -->
 	<configuration xmlns:r="http://midpoint.evolveum.com/xml/ns/public/report">
-        <r:LOGO_PATH>src/test/resources/reports/logo.jpg</r:LOGO_PATH>
-        <r:BaseTemplateStyles>src/test/resources/styles/midpoint_base_styles.jrtx</r:BaseTemplateStyles>
-        <r:from>2000-01-01T00:00:00</r:from>
-        <r:to>2020-12-31T00:00:00</r:to>
+		<r:hqlQuery>select aer.timestamp as timestamp, 
+					aer.initiatorName as initiator, 
+					aer.eventType as eventType, 
+					aer.eventStage as eventStage, 
+					aer.targetName as targetName, 
+					aer.targetType as targetType, 
+					aer.targetOwnerName as targetOwnerName,
+					aer.outcome as outcome, 
+					aer.message as message, 
+					odo.delta as delta 
+					from RObjectDeltaOperation as odo 
+					join odo.record as aer 
+					where aer.timestamp &gt;= $P{from} and aer.timestamp &lt;= $P{to}
+					order by aer.timestamp
+		</r:hqlQuery>
+		<r:logoPath>src/test/resources/reports/logo.jpg</r:logoPath>
+		<r:baseTemplateStyles>src/test/resources/styles/midpoint_base_styles.jrtx</r:baseTemplateStyles>
+		<r:from>2000-01-01T00:00:00</r:from>
+		<r:to>2020-12-31T00:00:00</r:to>
+		<r:eventType>all</r:eventType>
 	</configuration>
 	<!-- report parameters configuration schema sample with different options -->
 	<configurationSchema>
@@ -361,24 +362,52 @@
                     targetNamespace="http://midpoint.evolveum.com/xml/ns/public/report">
 
 				<xsd:import namespace="http://midpoint.evolveum.com/xml/ns/public/common/common-2a"/>
-                <xsd:import namespace="http://prism.evolveum.com/xml/ns/public/annotation-2"/>
+				<xsd:import namespace="http://prism.evolveum.com/xml/ns/public/annotation-2"/>
 				<xsd:import namespace="http://prism.evolveum.com/xml/ns/public/query-2"/>
 
-                <xsd:complexType name="ConfigurationType">
-                    <xsd:annotation>
-                        <xsd:appinfo>
-                            <a:container/>
-                        </xsd:appinfo>
-                    </xsd:annotation>
-                    <xsd:sequence>
-                        <xsd:element name="LOGO_PATH" type="xsd:string"/>
-                        <xsd:element name="BaseTemplateStyles" type="xsd:string"/>
-                        <xsd:element name="from" type="xsd:dateTime"/>
-                        <xsd:element name="to" type="xsd:dateTime"/>
-                    </xsd:sequence>
-                </xsd:complexType>
+				<xsd:complexType name="ConfigurationType">
+					<xsd:annotation>
+						<xsd:appinfo>
+							<a:container/>
+						</xsd:appinfo>
+					</xsd:annotation>
+					<xsd:sequence>
 
-                <xsd:element name="configuration" type="r:ConfigurationType"/>
+						<!-- HQL query for jasper design (queryString element) -->
+						<xsd:element name="hqlQuery" type="xsd:string"/>
+
+						<!-- special design parameters for all evolveum reports -->
+						<xsd:element name="logoPath" type="xsd:string"/>
+						<xsd:element name="baseTemplateStyles" type="xsd:string"/>
+
+						<!-- special audit configuration -->
+						<xsd:element name="from" type="xsd:dateTime">
+							<xsd:annotation>
+								<xsd:appinfo>
+									<a:displayName>From:</a:displayName>
+								</xsd:appinfo>
+							</xsd:annotation>
+						</xsd:element>
+
+						<xsd:element name="to" type="xsd:dateTime">
+							<xsd:annotation>
+								<xsd:appinfo>
+									<a:displayName>To:</a:displayName>
+								</xsd:appinfo>
+							</xsd:annotation>
+						</xsd:element>
+						<xsd:element name="eventType" type="r:EventType"/>
+					</xsd:sequence>
+				</xsd:complexType>
+				<xsd:simpleType name="EventType">
+					<xsd:restriction base="xsd:string">
+						<xsd:enumeration value="createSession"/>
+						<xsd:enumeration value="getObject"/>
+						<xsd:enumeration value="all"/>
+					</xsd:restriction>
+				</xsd:simpleType>
+
+				<xsd:element name="configuration" type="r:ConfigurationType"/>
 			</xsd:schema>
 		</definition>
 	</configurationSchema>
