MID-1665 - small fixes and layout/functionality improvements based on notes from Vilo.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/UploadPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/UploadPanel.html
@@ -16,14 +16,16 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <div class="col-lg-2">
-        <a class="btn btn-primary btn-xs" wicket:id="upload" wicket:message="title:UploadPanel.upload.tooltip">
-            <i class="fa fa-upload"/>
-        </a>
-    </div>
+    <div wicket:id="feedback" class="messagePanel"/>
 
     <div class="col-lg-2">
         <input wicket:id="fileInput" type="file"/>
+    </div>
+
+    <div class="col-lg-2 pull-right">
+        <a class="btn btn-primary btn-sm" wicket:id="upload" wicket:message="title:UploadPanel.upload.tooltip">
+            <i class="fa fa-upload"/>
+        </a>
     </div>
 </wicket:panel>
 </html>
