Added forgotten delete user photo functionallity.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/UploadPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/UploadPanel.html
@@ -23,6 +23,12 @@
     </div>
 
     <div class="col-lg-2 pull-right">
+        <a class="btn btn-danger btn-sm" wicket:id="remove" wicket:message="title:UploadPanel.delete.tooltip">
+            <i class="fa fa-trash-o"/>
+        </a>
+    </div>
+
+    <div class="col-lg-2 pull-right">
         <a class="btn btn-primary btn-sm" wicket:id="upload" wicket:message="title:UploadPanel.upload.tooltip">
             <i class="fa fa-upload"/>
         </a>
