--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/DefaultReportPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/DefaultReportPanel.html
@@ -17,15 +17,16 @@
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
 
-    <h3 style="margin-left: 20px;">
-        <wicket:message key="defaultReportPanel.title.basic"/>
-    </h3>
-
     <div class="row">
         <div class="col-md-6">
+            <h3 style="margin-left: 20px;"><wicket:message key="defaultReportPanel.title.basic"/></h3>
+
             <div class="form-group" wicket:id="name" />
             <div class="form-group" wicket:id="description" />
             <div class="form-group" wicket:id="exportType" />
+        </div>
+        <div class="col-md-6">
+            <div wicket:id="properties"/>
         </div>
     </div>
 
