--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/ReportConfigurationPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/ReportConfigurationPanel.html
@@ -19,7 +19,7 @@
 
     <div class="row">
         <div class="col-md-6">
-            <h3 style="margin-left: 20px;"><wicket:message key="defaultReportPanel.title.basic"/></h3>
+            <h3 style="margin-left: 20px;"><wicket:message key="ReportConfigurationPanel.title.basic"/></h3>
 
             <div class="form-group" wicket:id="name" />
             <div class="form-group" wicket:id="description" />
