--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel.html
@@ -40,6 +40,7 @@
 
         <div class="main-button-bar" style="margin-left: 20px;">
             <span class="button-group">
+                <a class="btn btn-success" wicket:id="addStandardLogger" />
                 <a class="btn btn-success" wicket:id="addComponentLogger"/>
                 <a class="btn btn-success" wicket:id="addClassLogger"/>
             </span>
