--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/UploadPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/UploadPanel.html
@@ -18,20 +18,19 @@
 <wicket:panel>
     <div wicket:id="feedback" class="messagePanel"/>
 
-    <div class="col-lg-2">
+    <div class="col-xs-8">
         <input wicket:id="fileInput" type="file"/>
     </div>
 
-    <div class="col-lg-2 pull-right">
-        <a class="btn btn-danger btn-sm" wicket:id="remove" wicket:message="title:UploadPanel.delete.tooltip">
-            <i class="fa fa-trash-o"/>
-        </a>
-    </div>
-
-    <div class="col-lg-2 pull-right">
-        <a class="btn btn-primary btn-sm" wicket:id="upload" wicket:message="title:UploadPanel.upload.tooltip">
-            <i class="fa fa-upload"/>
-        </a>
+    <div class="col-xs-4">
+        <span class="btn-group pull-right">
+            <a class="btn btn-default btn-sm" wicket:id="upload" wicket:message="title:UploadPanel.upload.tooltip">
+                <i class="fa fa-upload"/>
+            </a>
+            <a class="btn btn-danger btn-sm" wicket:id="remove" wicket:message="title:UploadPanel.delete.tooltip">
+                <i class="fa fa-trash-o"/>
+            </a>
+        </span>
     </div>
 </wicket:panel>
 </html>
