improved tooltip behavior, fixed tooltip on system config page.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.html
@@ -66,9 +66,7 @@
                             wicket:message="placeholder:SystemConfigPanel.cleanupPolicy.placeholder">
                 </div>
 
-                <a href="#" rel="tooltip" class="btn btn-xs" data-placement="right" data-original-title="format: P[n][p], n-number, p-period (d - days, m - months, ...), P3M - cleanup every 3 months">
-                    <i class="glyphicon glyphicon-info-sign" ></i>
-                </a>
+                <i wicket:id="auditRecordsCleanupTooltip" wicket:message="title:SystemConfigPanel.tooltip.duration"/>
             </div>
             <div class="form-group">
                 <label class="col-lg-4 control-label">
@@ -80,9 +78,7 @@
                            wicket:message="placeholder:SystemConfigPanel.cleanupPolicy.placeholder">
                 </div>
 
-                <a href="#" rel="tooltip" class="btn btn-xs" data-placement="right" data-original-title="format: P[n][p], n-number, p-period (d - days, m - months, ...), P3M - cleanup every 3 months">
-                    <i class="glyphicon glyphicon-info-sign" ></i>
-                </a>
+                <i wicket:id="closedTasksCleanupTooltip" wicket:message="title:SystemConfigPanel.tooltip.duration"/>
             </div>
         </div>
 
