removed dead gui-components module

--- a/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
@@ -14,6 +14,7 @@
 @import "page-debugs.less";
 @import "capabilities.less";
 @import "tree-theme-basic.less";
+@import "operation-result.less";
 
 div.wicket-debug-buttons {
   border: 1px solid #000000;
